--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "twilio": "^3.54.2",
+    "twilio-video": "^2.10.0"
   }
 }
